--- a/src/app/components/gastos/ingresar-gasto/ingresar-gasto.component.html
+++ b/src/app/components/gastos/ingresar-gasto/ingresar-gasto.component.html
@@ -1,1 +1,20 @@
-<p>ingresar-gasto works!</p>
+<h4 class="text-center">Ingresar Gasto</h4>
+<hr />
+
+<div *ngIf="formularioIncorrecto" class="text-center">
+    <span class="badge bg-danger text-error">{{textIncorrecto | uppercase}}</span>
+</div>
+
+<div class="mt-3">
+    <div class="form-group mb-4">
+        <label for="gasto">Gasto</label>
+        <input type="text" [(ngModel)]="nombreGasto" id="gasto" class="form-control form-control-lg" placeholder="Ej. Comida">
+    </div>
+    
+    <div class="form-group mb-4">
+        <label for="cantidad">Cantidad</label>
+        <input type="number" [(ngModel)]="cantidad" id="cantidad" class="form-control form-control-lg" placeholder="Ingrese cantidad">
+    </div>
+</div>
+
+<button class="btn btn-primary btn-lg btn-block w-100" (click)="agregarGasto()">Agregar Gasto</button>
