--- a/src/app/components/gastos/listar-gastos/listar-gastos.component.html
+++ b/src/app/components/gastos/listar-gastos/listar-gastos.component.html
@@ -1,1 +1,29 @@
-<p>listar-gastos works!</p>
+<h4 class="text-center">Listado de Gastos</h4>
+
+<hr />
+
+<div class="row mt-5">
+    <div class="col-lg-6">
+        <div class="alert alert-success size-alert">
+            Presupuesto: <strong>{{ presupuesto | currency}}</strong>
+        </div>
+    </div>
+
+    <div class="col-lg-6">
+        <div class="size-alert" [ngClass]="aplicarColorRestante()">
+            Restante: <strong>{{ restante | currency}}</strong>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-lg-12">
+        <ul class="list-group list-group-flush">
+            <li class="list-group-item d-flex justify-content-between" *ngFor="let gasto of listGastos; let i = index">
+                <strong>{{ gasto.nombre }}</strong>
+                <span class="badge rounded-pill bg-secondary">{{ gasto.cantidad | currency }} </span>
+                <span class="mdi mdi-minus-box mdi-18px text-danger cursor"(click)=" removerGasto(i)"></span>
+            </li>
+        </ul>
+    </div>
+</div>
